--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   width: 500px;
   height: 500px;
   border-radius: 10px;
-  background-color: lightseagreen;
+  background-color: rgb(212, 0, 255);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -35,7 +35,7 @@ button:hover {
   width: 500px;
   height: 500px;
   border-radius: 10px;
-  background-color: lightseagreen;
+  background-color: rgb(212, 0, 255);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -50,7 +50,7 @@ button:hover {
   width: 500px;
   height: 500px;
   border-radius: 10px;
-  background-color: lightseagreen;
+  background-color: rgb(212, 0, 255);
   display: flex;
   flex-direction: column;
   justify-content: center;
